Fixes survey height on mobile view issue

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -43,7 +43,7 @@ body {
 .dropdown {
   background: transparent;
   border: solid black 1px;
-  min-width: 300px;
+  min-width: 200px;
   width: 100%;
 }
 
