--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -30,6 +30,7 @@
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .dot {
