--- a/src/styles/components/_survey.scss
+++ b/src/styles/components/_survey.scss
@@ -106,6 +106,9 @@ body {
   text-align: center;
 }
 
+.survey-top-row {
+  height: 500px;
+}
 .survey-options-container {
   position: relative;
 }
